--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
+        <!-- ***** Fonts ***** -->
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Bangers" rel="stylesheet">
+
+        <!-- ***** CSS ***** -->
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="styles/leftnav.css">
         <link rel="stylesheet" href="styles/content.css">
