working on introduction slide.

--- a/index.html
+++ b/index.html
@@ -51,27 +51,37 @@
             <!-- ***** Content / Slides ***** -->
             <div id="content">
                 <div id="hello" class="slide">
-                    hello slide
+                    <h1>Hello, I'm Nick Gervais.</h1>
+                    <div> 
+                        <div>I attend UMD, gradutating Spring 2019</div>
+                        <div>I live in Coon Rapids</div>
+                    </div>
+                    <div>
+                        This summer I worked in the IT Contact Center, a part of Ryan Hawkins team.
+                    </div>
+                    <div>
+                        My manager is a fantastic man named Guillermo Chapellin.
+                    </div>
                 </div>
 
                 <div id="contact-center" class="slide">
-                    contact center slide
+                    <h1>Contact Center</h1>
                 </div>
 
                 <div id="my-team" class="slide">
-                    my team slide
+                    <h1>My Team</h1>
                 </div>
 
                 <div id="project-one" class="slide">
-                    project one slide
+                    <h1>Project One</h1>
                 </div>
 
                 <div id="paul" class="slide">
-                    paul slide
+                    <h1>Shout out to Paul!</h1>
                 </div>
 
                 <div id="farewell" class="slide">
-                    farewell slide
+                    <h1>Farewell All</h1>
                 </div>
             </div>
         </div>
