--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
         <div id="wrapper">
 
+            <div id="menu-icon">
+                <svg class="black-icon" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
+                </svg>
+            </div>
+
             <!-- ***** Left Navigation Bar ***** -->
             <div id="leftnav">
                 <div class="hello-nav nav-bubble">
@@ -96,31 +103,37 @@
         <script>
             // scroll to content class
             $(".hello-nav").click(function() {
+                $("#leftnav").addClass('closed');
                 $('html,body').animate({
                     scrollTop: $("#hello").offset().top},
                     'slow');
             });
             $(".contact-center-nav").click(function() {
+                $("#leftnav").addClass('closed');
                 $('html,body').animate({
                     scrollTop: $("#contact-center").offset().top},
                     'slow');
             });
             $(".my-team-nav").click(function() {
+                $("#leftnav").addClass('closed');
                 $('html,body').animate({
                     scrollTop: $("#my-team").offset().top},
                     'slow');
             });
             $(".project-one-nav").click(function() {
+                $("#leftnav").addClass('closed');
                 $('html,body').animate({
                     scrollTop: $("#project-one").offset().top},
                     'slow');
             });
             $(".paul-nav").click(function() {
+                $("#leftnav").addClass('closed');
                 $('html,body').animate({
                     scrollTop: $("#paul").offset().top},
                     'slow');
             });
             $(".farewell-nav").click(function() {
+                $("#leftnav").addClass('closed');
                 $('html,body').animate({
                     scrollTop: $("#farewell").offset().top},
                     'slow');
@@ -143,7 +156,7 @@
 
                     // checks if the top of the window is below the content and changes classes accordingly
             function checkWindowPos(){
-                console.log("checking win pos");
+                var winHeight = $(window).height();
                 var winPos = $(this).scrollTop();
                 var helloTop = $("#hello").offset().top;
                 var ccTop = $("#contact-center").offset().top;
@@ -152,26 +165,41 @@
                 var paulTop = $("#paul").offset().top;
                 var fTop = $("#farewell").offset().top;
 
-                if (winPos >= fTop) {
+                if (winPos >= fTop - winHeight*0.5) {
                     $("#leftnav div").removeClass("focus");
                     $(".farewell-nav").addClass("focus");
-                } else if(winPos >= paulTop) {
+                } else if(winPos >= paulTop - winHeight*0.5) {
                     $("#leftnav div").removeClass("focus");
                     $(".paul-nav").addClass("focus");
-                } else if(winPos >= poTop) {
+                } else if(winPos >= poTop - winHeight*0.5) {
                     $("#leftnav div").removeClass("focus");
                     $(".project-one-nav").addClass("focus");
-                } else if(winPos >= mtTop) {
+                } else if(winPos >= mtTop - winHeight*0.5) {
                     $("#leftnav div").removeClass("focus");
                     $(".my-team-nav").addClass("focus");
-                } else if(winPos >= ccTop) {
+                } else if(winPos >= ccTop - winHeight*0.5) {
                     $("#leftnav div").removeClass("focus");
                     $(".contact-center-nav").addClass("focus");
-                } else if(winPos >= helloTop) {
+                } else if(winPos >= helloTop - winHeight*0.5) {
                     $("#leftnav div").removeClass("focus");
                     $(".hello-nav").addClass("focus");
                 }
             }
+
+            $("#menu-icon").click(function(e){
+                console.log("menu icon clicked");
+                e.stopPropagation();                
+                $("#leftnav").toggleClass("closed");
+            });
+
+            $("#leftnav").click(function(e){
+                e.stopPropagation();
+            });
+
+            $("body").click(function(){
+                console.log("body clicked");
+                $("#leftnav").addClass("closed");
+            });
 
         </script>
     </body>
