added team picture and finished base of My Team section!

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="styles/content.css">
         <link rel="stylesheet" href="styles/hello.css">
         <link rel="stylesheet" href="styles/contact-center.css">
+        <link rel="stylesheet" href="styles/my-team.css">
 
-        
     </head>
     <body>
 
@@ -132,6 +132,22 @@
 
                 <div id="my-team" class="slide">
                     <h1>My Team</h1>
+                    <div class="split-memo">
+                        <div>
+                            <div class="team-img"></div>
+                            <div class="caption">Guillermo | Anshul | Me | Vincent | Lihe | Arun</div>
+                        </div>
+                        <div>
+                            <div class="jerry-img"></div>
+                            <div class="caption">Jerry</div>
+                        </div>
+                    </div>
+                    <div class="text2">
+                        I am so thankful to have been apart of this awesome team full of very intelligent people who taught me so much. Many Many Thanks Guys!
+                    </div>
+                    <div id="cta3" class="cta">
+                        On to the next Project!
+                    </div>
                 </div>
 
                 <div id="project-one" class="slide">
