--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
         <!-- ***** Fonts ***** -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Bangers|Itim" rel="stylesheet">
 
         <!-- ***** CSS ***** -->
@@ -17,6 +18,7 @@
         <link rel="stylesheet" href="styles/hello.css">
         <link rel="stylesheet" href="styles/contact-center.css">
         <link rel="stylesheet" href="styles/my-team.css">
+        <link rel="stylesheet" href="styles/project-one.css">
 
     </head>
     <body>
@@ -152,6 +154,45 @@
 
                 <div id="project-one" class="slide">
                     <h1>Project One</h1>
+                    <div class="split-content">
+                        <div class="left-side">
+                            <div class="flex-row">
+                                <i id="slide-left" class="material-icons large">keyboard_arrow_left</i>
+                                <div class="image-window">
+                                    <div class="slideImage" style="background: black;">
+                                    </div>
+                                    <div class="slideImage" style="background: gray;">
+                                    </div>
+                                    <div class="slideImage" style="background: lightgray;">
+                                    </div>
+                                    <div class="slideImage" style="background: white;">
+                                    </div>
+                                </div>
+                                <i id="slide-right" class="material-icons large">keyboard_arrow_right</i>
+                            </div>
+                            <div id="cta4" class="cta">
+                                Let's meet Paul
+                            </div>
+                        </div>
+                        <div class="divider">
+                        </div>
+                        <div class="right-side">
+                            <div>
+                                The project I worked on was ERP Chart of Accounts.
+                            </div>
+                            <div>
+                                This is a web page to help transfer all of the old documents to the new Oracle system.
+                            </div>
+                            <div>
+                                What I did:
+                                <ul>
+                                    <li>Created a whole new menu layout and dynamic side navigation</li>
+                                    <li>Created a template for all mapping modifications</li>
+                                    <li>Created a back to search button</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div id="paul" class="slide">
@@ -326,6 +367,34 @@
                 console.log("body clicked");
                 $("#leftnav").addClass("closed");
             });
+
+
+            //slide show 2
+            var slideIndex = 1;
+            slideshow(slideIndex);
+
+            $("#slide-left").click(function(){
+                slideshow(slideIndex += -1);
+            });
+
+            $("#slide-right").click(function(){
+                slideshow(slideIndex += 1);
+            })
+
+            function slideshow(n) {
+                var slides = document.getElementsByClassName("slideImage");
+                if(n > slides.length) {
+                    slideIndex = 1;
+                } 
+                if(n < 1) {
+                    slideIndex = slides.length;
+                }
+                for(var i = 0; i < slides.length; i++){
+                    slides[i].style.display = "none";
+                }
+                slides[slideIndex - 1].style.display = "block";
+            }
+            //end slideshow 2
 
         </script>
     </body>
