made cursor on the left and right arrows be pointers. added caption to slideshow.

--- a/index.html
+++ b/index.html
@@ -156,19 +156,24 @@
                     <h1>Project One</h1>
                     <div class="split-content">
                         <div class="left-side">
-                            <div class="flex-row">
-                                <i id="slide-left" class="material-icons large">keyboard_arrow_left</i>
-                                <div class="image-window">
-                                    <div class="slideImage" style="background: black;">
+                            <div style="text-align: center;">
+                                <div class="flex-row">
+                                    <i id="slide-left" class="material-icons large">keyboard_arrow_left</i>
+                                    <div class="image-window">
+                                        <div class="slideImage" style="background: black;">
+                                        </div>
+                                        <div class="slideImage" style="background: gray;">
+                                        </div>
+                                        <div class="slideImage" style="background: lightgray;">
+                                        </div>
+                                        <div class="slideImage" style="background: white;">
+                                        </div>
                                     </div>
-                                    <div class="slideImage" style="background: gray;">
-                                    </div>
-                                    <div class="slideImage" style="background: lightgray;">
-                                    </div>
-                                    <div class="slideImage" style="background: white;">
-                                    </div>
+                                    <i id="slide-right" class="material-icons large">keyboard_arrow_right</i>
                                 </div>
-                                <i id="slide-right" class="material-icons large">keyboard_arrow_right</i>
+                                <div class="caption">
+                                    Screenshots of work I completed on the coa ui.
+                                </div>
                             </div>
                             <div id="cta4" class="cta">
                                 Let's meet Paul
