--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                 <div class="flex-row">
                                     <i id="slide-left" class="material-icons large">keyboard_arrow_left</i>
                                     <div class="image-window">
-                                        <div class="slideImage" style="background: black;">
+                                        <div class="slideImage" style="background-image: url('./images/p1-1.png');">
                                         </div>
                                         <div class="slideImage" style="background: gray;">
                                         </div>
