--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="styles/contact-center.css">
         <link rel="stylesheet" href="styles/my-team.css">
         <link rel="stylesheet" href="styles/project-one.css">
+        <link rel="stylesheet" href="styles/paul.css">
 
     </head>
     <body>
@@ -202,6 +203,28 @@
 
                 <div id="paul" class="slide">
                     <h1>Shout out to Paul!</h1>
+                    <div class="split-content">
+                        <div class="left-side">
+                            <div style="text-align: center">
+                                <div  class="paul-img"></div>
+                                <div class="caption">Paul | Me</div>
+                        
+                            </div>
+                        </div>
+                        <div class="divider"></div>
+                        <div class="right-side flex-center">
+                            <div class="text-center text2">
+                                Paul is truely a computer genuis and taught me so much over the course of a month.
+                                He was a very very busy guy but always took time to help me and others with questions.
+                            </div>
+                            <div class="text-center text2">
+                                So <strong>Thank You</strong> Paul for everything you do!
+                            </div>
+                            <div id="cta5" class="cta">
+                                TCF will be missed...
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div id="farewell" class="slide">
