added functionality to cta5, brings you to farewell slide

--- a/index.html
+++ b/index.html
@@ -351,6 +351,18 @@
                         'slow');
                 }
             });
+
+            $("#cta5").click(function() {
+                if($(window).width() > 950){
+                    $('html,body').animate({
+                        scrollTop: $("#farewell").offset().top},
+                        'slow');
+                } else {
+                    $('html,body').animate({
+                        scrollTop: $("#farewell").offset().top - 60},
+                        'slow');
+                }
+            });
             
             // calls checkWindowPos on every scroll event
             $(window).scroll(function() {
