changed buttons on slide show

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="styles/my-team.css">
         <link rel="stylesheet" href="styles/project-one.css">
         <link rel="stylesheet" href="styles/paul.css">
+        <link rel="stylesheet" href="styles/farewell.css">
 
     </head>
     <body>
@@ -159,7 +160,9 @@
                         <div class="left-side">
                             <div style="text-align: center;">
                                 <div class="flex-row">
-                                    <i id="slide-left" class="material-icons large">keyboard_arrow_left</i>
+                                    <div id="slide-left" class="cta-small">
+                                        <i class="material-icons large">keyboard_arrow_left</i>
+                                    </div>
                                     <div class="image-window">
                                         <div class="slideImage" style="background-image: url('./images/p1-1.png');">
                                         </div>
@@ -170,7 +173,9 @@
                                         <div class="slideImage" style="background: white;">
                                         </div>
                                     </div>
-                                    <i id="slide-right" class="material-icons large">keyboard_arrow_right</i>
+                                    <div id="slide-right" class="cta-small">
+                                        <i class="material-icons large">keyboard_arrow_right</i>
+                                    </div>
                                 </div>
                                 <div class="caption">
                                     Screenshots of work I completed on the coa ui.
@@ -228,7 +233,7 @@
                 </div>
 
                 <div id="farewell" class="slide">
-                    <h1>Farewell All</h1>
+                    <h1>Farewell</h1>
                 </div>
             </div>
         </div>
