more responsive changes

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <div class="tile odd">Mean Stack</div>
                         <div class="tile">Agile Development</div>
                         <div class="tile odd">Spring Boot</div>
-                        <div class="tile">Team Communication</div>
+                        <div class="tile">Team Work</div>
                         <div class="tile odd">Docker</div>                        
                         <div class="tile">Networking</div>
                         <div class="tile odd">Html / CSS</div>
