finished farewell slide

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="divider"></div>
-                        <div class="right-side flex-center">
+                        <div class="right flex-center">
                             <div class="text-center text2">
                                 Paul is truely a computer genuis and taught me so much over the course of a month.
                                 He was a very very busy guy but always took time to help me and others with questions.
@@ -231,7 +231,7 @@
                                 So <strong>Thank You</strong> Paul for everything you do!
                             </div>
                             <div id="cta5" class="cta">
-                                TCF will be missed...
+                                Here's what I learned!
                             </div>
                         </div>
                     </div>
@@ -252,14 +252,14 @@
 
                 <div id="farewell" class="slide">
                     <h1>Farewell</h1>
-                    <div class="split-content">
-                        <div>
-
-                        </div>
-                        <div>
-
-                        </div>
+                    <div class="text2">This has been a great summer. I learned a lot about technologies, programming, developing in teams, and the professional world.
+                        I also met a lot of awesome people that helped me along the way and taught me so much as well.
+                        So thank you to you all even if I didn't mention you. My time here has shaped my future and I couldn't have asked for anything more.
                     </div>
+                    <div id="contact-cta" class="cta">
+                        Thank you TCF!!
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -397,11 +397,11 @@
             $("#cta5").click(function() {
                 if($(window).width() > 950){
                     $('html,body').animate({
-                        scrollTop: $("#farewell").offset().top},
+                        scrollTop: $("#learn").offset().top},
                         'slow');
                 } else {
                     $('html,body').animate({
-                        scrollTop: $("#farewell").offset().top - 60},
+                        scrollTop: $("#learn").offset().top - 60},
                         'slow');
                 }
             });
