--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="styles/paul.css">
         <link rel="stylesheet" href="styles/farewell.css">
         <link rel="stylesheet" href="styles/learn.css">
+        <link rel="stylesheet" href="styles/contact-me.css">
 
     </head>
     <body>
@@ -260,6 +261,31 @@
                         Thank you TCF!!
                     </div>
 
+                </div>
+
+                <div id="contact-me" class="slide">
+                    <h1>Contact Me</h1>
+                    <div class="text2">
+                        If you have any questions or just want to chat feel free to get a hold of me!
+                    </div>
+                    <div class="card">
+                        <div class="text2">
+                            nicholaspgervais@gmail.com
+                        </div>
+                    </div>
+                    <div class="media-icons">
+                        <a href="https://www.linkedin.com/in/nicholasgervais6/">
+                            <svg id="linked-in"viewBox="0 0 24 24">
+                                <path d="M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19M18.5,18.5V13.2A3.26,3.26 0 0,0 15.24,9.94C14.39,9.94 13.4,10.46 12.92,11.24V10.13H10.13V18.5H12.92V13.57C12.92,12.8 13.54,12.17 14.31,12.17A1.4,1.4 0 0,1 15.71,13.57V18.5H18.5M6.88,8.56A1.68,1.68 0 0,0 8.56,6.88C8.56,5.95 7.81,5.19 6.88,5.19A1.69,1.69 0 0,0 5.19,6.88C5.19,7.81 5.95,8.56 6.88,8.56M8.27,18.5V10.13H5.5V18.5H8.27Z" />
+                            </svg>
+                        </a>
+
+                        <a href="https://github.umn.edu/gerva038">
+                            <svg id="github" viewBox="0 0 512 512">
+                                <path d="M256 70.7c-102.6 0-185.9 83.2-185.9 185.9 0 82.1 53.3 151.8 127.1 176.4 9.3 1.7 12.3-4 12.3-8.9V389.4c-51.7 11.3-62.5-21.9-62.5-21.9 -8.4-21.5-20.6-27.2-20.6-27.2 -16.9-11.5 1.3-11.3 1.3-11.3 18.7 1.3 28.5 19.2 28.5 19.2 16.6 28.4 43.5 20.2 54.1 15.4 1.7-12 6.5-20.2 11.8-24.9 -41.3-4.7-84.7-20.6-84.7-91.9 0-20.3 7.3-36.9 19.2-49.9 -1.9-4.7-8.3-23.6 1.8-49.2 0 0 15.6-5 51.1 19.1 14.8-4.1 30.7-6.2 46.5-6.3 15.8 0.1 31.7 2.1 46.6 6.3 35.5-24 51.1-19.1 51.1-19.1 10.1 25.6 3.8 44.5 1.8 49.2 11.9 13 19.1 29.6 19.1 49.9 0 71.4-43.5 87.1-84.9 91.7 6.7 5.8 12.8 17.1 12.8 34.4 0 24.9 0 44.9 0 51 0 4.9 3 10.7 12.4 8.9 73.8-24.6 127-94.3 127-176.4C441.9 153.9 358.6 70.7 256 70.7z"/>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
