added functionality to contact-cta button

--- a/index.html
+++ b/index.html
@@ -431,6 +431,17 @@
                         'slow');
                 }
             });
+            $("#contact-cta").click(function() {
+                if($(window).width() > 950){
+                    $('html,body').animate({
+                        scrollTop: $("#contact-me").offset().top},
+                        'slow');
+                } else {
+                    $('html,body').animate({
+                        scrollTop: $("#contact-me").offset().top - 60},
+                        'slow');
+                }
+            });
             
             // calls checkWindowPos on every scroll event
             $(window).scroll(function() {
