--- a/index.html
+++ b/index.html
@@ -215,15 +215,14 @@
                 <div id="paul" class="slide">
                     <h1>Shout out to Paul!</h1>
                     <div class="split-content">
-                        <div class="left-side">
-                            <div style="text-align: center; height: 100%; width: 100%;">
+                        <div class="right flex-center">
+                            <div style="text-align: center;">
                                 <div  class="paul-img"></div>
                                 <div class="caption">Paul | Me</div>
-                        
                             </div>
                         </div>
-                        <div class="divider"></div>
-                        <div class="right flex-center">
+                        <div class="non-mobile divider"></div>
+                        <div class="right flex-center non-mobile">
                             <div class="text-center text2">
                                 Paul is truely a computer genuis and taught me so much over the course of a month.
                                 He was a very very busy guy but always took time to help me and others with questions.
@@ -231,10 +230,21 @@
                             <div class="text-center text2">
                                 So <strong>Thank You</strong> Paul for everything you do!
                             </div>
-                            <div id="cta5" class="cta">
-                                Here's what I learned!
-                            </div>
                         </div>
+                    </div>
+                    <div class="mobile">
+                     <div class="right flex-center">
+                        <div class="text-center text2">
+                            Paul is truely a computer genuis and taught me so much over the course of a month.
+                            He was a very very busy guy but always took time to help me and others with questions.
+                        </div>
+                        <div class="text-center text2">
+                            So <strong>Thank You</strong> Paul for everything you do!
+                        </div>
+                    </div> 
+                    </div>
+                    <div id="cta5" class="cta">
+                        Here's what I learned!
                     </div>
                 </div>
 
