removed pictures do to security reasons. added classified stamp to slideshow

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
                     </div>
                     <div class="split-content">
                         <div class="left">
-                            <div>
+                            <div class="text2">
                                 My project this summer was to create a <strong>new IVR Test Tool</strong>.
                             </div>
-                            <div>
+                            <div class="text2">
                                 All of the source code had been lost for the old test tool, and there was many approvements that could be made, so we made a new one!
                             </div>
-                            <div>
+                            <div class="text2">
                                 <strong> Improvements include: </strong>
                                 <ul>
                                     <li>A dynamic add, edit, and remove process</li>
@@ -112,7 +112,7 @@
                                     <li>Admin and User roles / access</li>
                                 </ul>
                             </div>
-                            <div>
+                            <div class="text2">
                                 <strong> Technologies used: </strong>
                                 <ul>
                                     <li>MEAN Stack</li>
@@ -169,14 +169,19 @@
                                     <div id="slide-left" class="cta-small">
                                         <i class="material-icons large">keyboard_arrow_left</i>
                                     </div>
-                                    <div class="image-window">
-                                        <div class="slideImage" style="background-image: url('./images/p1-1.png');">
+                                    <div class="center-box">
+                                        <div class="image-window">
+                                            <div class="slideImage" style="background: lightgray;">
+                                            </div>
+                                            <div class="slideImage" style="background: white;">
+                                            </div>
+                                            <div class="slideImage" style="background: lightgray;">
+                                            </div>
+                                            <div class="slideImage" style="background: white;">
+                                            </div>
                                         </div>
-                                        <div class="slideImage" style="background: gray;">
-                                        </div>
-                                        <div class="slideImage" style="background: lightgray;">
-                                        </div>
-                                        <div class="slideImage" style="background: white;">
+                                        <div class="classified">
+                                            CLASSIFIED
                                         </div>
                                     </div>
                                     <div id="slide-right" class="cta-small">
