switched names on caption under the paul image

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <div class="right flex-center">
                             <div style="text-align: center;">
                                 <div  class="paul-img"></div>
-                                <div class="caption">Paul | Me</div>
+                                <div class="caption">Me | Paul</div>
                             </div>
                         </div>
                         <div class="non-mobile divider"></div>
