working on making project one slide responsive

--- a/index.html
+++ b/index.html
@@ -192,21 +192,39 @@
                                     Screenshots of work I completed on the coa ui.
                                 </div>
                             </div>
+                            <div class="is-mobile flex-row">
+                                <div class="flex-column">
+                                    <div>   
+                                        <strong>Project:</strong> ERP Chart of Accounts.
+                                    </div>
+                                    <div>
+                                        This is a web page to help transfer all of the old documents to the new Oracle system.
+                                    </div>
+                                </div>
+                                <div>
+                                    <strong>What I did:</strong>
+                                    <ul>
+                                        <li>Created a whole new menu layout and dynamic side navigation</li>
+                                        <li>Created a template for all mapping modifications</li>
+                                        <li>Created a back to search button</li>
+                                    </ul>
+                                </div>
+                            </div>
                             <div id="cta4" class="cta">
                                 Let's meet Paul
                             </div>
                         </div>
-                        <div class="divider">
+                        <div class="divider not-mobile">
                         </div>
-                        <div class="right-side">
+                        <div class="right-side not-mobile">
                             <div>
-                                The project I worked on was ERP Chart of Accounts.
+                               <strong>Project:</strong> ERP Chart of Accounts.
                             </div>
                             <div>
                                 This is a web page to help transfer all of the old documents to the new Oracle system.
                             </div>
                             <div>
-                                What I did:
+                                <strong>What I did:</strong>
                                 <ul>
                                     <li>Created a whole new menu layout and dynamic side navigation</li>
                                     <li>Created a template for all mapping modifications</li>
