--- a/index.html
+++ b/index.html
@@ -192,14 +192,12 @@
                                     Screenshots of work I completed on the coa ui.
                                 </div>
                             </div>
-                            <div class="is-mobile flex-row">
-                                <div class="flex-column">
-                                    <div>   
-                                        <strong>Project:</strong> ERP Chart of Accounts.
-                                    </div>
-                                    <div>
-                                        This is a web page to help transfer all of the old documents to the new Oracle system.
-                                    </div>
+                            <div class="is-mobile flex-column flex1">
+                                <div>   
+                                    <strong>Project:</strong> ERP Chart of Accounts.
+                                </div>
+                                <div>
+                                    This is a web page to help transfer all of the old documents to the new Oracle system.
                                 </div>
                                 <div>
                                     <strong>What I did:</strong>
