added snarky comment..

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div id="contact-center" class="slide">
                     <div style="width: 100%; text-align: center;">
                         <h1 class="title">Contact Center</h1>
-                        <div class="caption">No, I don't take phone calls...</div>
+                        <div class="caption">No, I don't take phone calls... I code.</div>
                     </div>
                     <div class="split-content">
                         <div class="left not-mobile">
